--- a/C study.vcxproj
+++ b/C study.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="10.02.c" />
+    <ClCompile Include="11.11.c" />
     <ClCompile Include="9.19-2.c" />
     <ClCompile Include="9.19-3.c" />
     <ClCompile Include="9.19.c" />
