--- a/C study.vcxproj.filters
+++ b/C study.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="10.02.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="11.11.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
